# super-dev-gcp-live

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  changes.txt  main.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: delivery.yml  integration.yml
data/: changes.txt
src/: main.py
src/utils/: generate_changes.py
terraform/environments/prod/: main.tf  variables.tf
terraform/modules/cloud-run/: main.tf  outputs.tf  variables.tf
terraform/modules/cloud-run/sample/: Dockerfile
terraform/modules/workload-identity-provider/: main.tf  outputs.tf  variables.tf
utils/: generate_changes.py  git_utils.py  subprocessor.py
